...
        <item>Electronics</item>
        <item>Games</item>
        <item>Clothes</item>
        <item>Miscellaneous</item>
    </string-array>
    <string name="report_user">Report User</string>
    <string name="inappropriate_username">Inappropriate Username</string>
    <string name="inappropriate_profile_picture">Inappropriate Profile Picture</string>
    <string name="inappropriate_item">Inappropriate Item</string>
    <string name="other">Other</string>
    <string name="hint_report_description">Provide a description for the report (optional)</string>
    <string name="eng_inappropriate_username">Inappropriate Username</string>
    <string name="eng_inappropriate_profile_picture">Inappropriate Profile Picture</string>
    <string name="eng_inappropriate_item">Inappropriate Item</string>
    <string name="eng_other">Other</string>
    <string name="eng_reporting">Reporting</string>
    <string name="i_feel_lucky">I Feel Lucky</string>
...
