...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.title}"
                android:textSize="30sp"
                tools:text="Title" />

...
                android:textSize="18sp"
                tools:ignore="RtlSymmetry"
                tools:text="Posted by" />


            <Button
                android:id="@+id/itemPostedBy"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@{username}"
                android:textColor="@color/themeColor"
...
